--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div> 
             <h1>DIABLO IV</h1>
             <br><br>
-            <img src="https://i.im.ge/2024/05/20/Kuw6Wm.6DF18C2C-86D0-441D-8F09-A96B59AEDB3A.png" class="banner-image" alt="Banner">
+            <img src="https://i.im.ge/2024/05/21/KuZXZr.Sem-nome-1920-x-920-px-5.png" class="banner-image" alt="Banner">
             <br><br>
             <h2>Junte-se à luta por Santuário no Diablo® IV, a aventura suprema de RPG de ação. Vivencie a campanha aclamada pela crítica e os novos conteúdos de temporada.</h2>
             <br><br>
