--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul id="menu-h">
         <li><a class="link" href="https://chatgpt.com/?oai-dm=1">Suporte</a></li>
-        <li><a class="link" href="https://mariaa28738.github.io/sitee/">Home</a></li>
+        <li><a class="link" href="https://mariaa28738.github.io/site/">Home</a></li>
         <li>
             <div class="dropdown">
                 <span>Conheça as Desenvolvedoras</span>
